tests/golden/type_errors/array_count_non_array.cd
count(1, fun (value) { return true; });
