tests/golden/type_errors/array_count_non_array.err
Type error at 1:38: count expects array as first argument, got number
  count(1, fun (value) { return true; });
                                       ^
